# Matrix-Free-Solvers

./: CMakeLists.txt  README.md
ADR-Matrix-implementation/Parallel_version/: CMakeLists.txt
ADR-Matrix-implementation/Parallel_version/src/: DiffusionReaction-parallel.cpp  DiffusionReaction-parallel.hpp  exercise-01-parallel.cpp
ADR-Matrix-implementation/Sequential_version/: CMakeLists.txt
ADR-Matrix-implementation/Sequential_version/src/: DiffusionReaction.cpp  DiffusionReaction.hpp  exercise-01.cpp
plot/: MatrixFree_p12.csv  analysis_script.py  hardware_scalability_based.csv  hardware_scalability_free.csv  histogram.py  histogramMatrixFree.py  matrixfreesolo.py  onecoreMatrixProfiling.csv  solomatrixfree.csv  strong_scaling.py  throughput.py  tscal_ncore_p6_m3.csv  weak_scaling.csv  weak_scaling.py
plot/error_convergence/: convergence_inhom_mg_based_noadv_2.csv  convergence_inhom_mg_free_noadv_2.csv  convergence_mg_based_noadv_p2.csv  convergence_mg_free_noadv_p2.csv
src/: ADROperator.cpp  ADROperator.hpp  DiffusionReaction-parallel.cpp  DiffusionReaction-parallel.hpp  MatrixFreeSolver.cpp  MatrixFreeSolver.hpp  MatrixFreeSolverMG.cpp  MatrixFreeSolverMG.hpp  example1_matrix_free.cpp  main.cpp  mainMG.cpp  profiling_based.cpp  profiling_free.cpp  run_profiling.sh  step37.cpp  validation_based.cpp  validation_free.cpp  validation_inhomogeneous_based.cpp  validation_inhomogeneous_free.cpp  weak_scaling_based.cpp  weak_scaling_free.cpp
